--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "db-migrate-mysql": "^2.2.0",
     "express": "^4.17.3",
     "express-boom": "^3.0.0",
